--- a/src/scss/components/ProductCard.scss
+++ b/src/scss/components/ProductCard.scss
@@ -174,6 +174,29 @@
     .product-properties {
       word-wrap: break-word;
       padding: 15px;
+
+      .property-section{
+        margin-bottom: 1rem;
+      }
+
+      .stock-block{
+        display: flex;
+        justify-content: center;
+
+        .stock{
+          background: #ededed;
+          display: inline-block;
+          font-size: 14px;
+          padding: 4px 8px;
+          border-radius: 4px;
+          max-width: 125px;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          margin-right: 4px;
+        }    
+
+      }
+
     }
   
   }
