--- a/src/scss/components/ProductDetail.scss
+++ b/src/scss/components/ProductDetail.scss
@@ -42,6 +42,7 @@
         margin-left: 50px;
         display: flex;
         flex-direction: column;
+        position: relative;
   
   
         .image-wrapper {
@@ -87,9 +88,12 @@
         display: flex;
         display: -webkit-box;
         flex-wrap: wrap;
+        
 
-        .property-value{
-          margin-left: 40px;
+        .property-title{
+          margin-right: 40px;
+          position: relative;
+
         }
       }
   
