--- a/src/scss/components/Pagination.scss
+++ b/src/scss/components/Pagination.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     margin: 0 auto 60px;
     padding: 0 15px;
+    justify-content: center;
 
     &__left, &__right{
         width: 20%;
