Pagination now works,  ProductionAddEdit fixed

--- a/src/scss/components/ProductAddEdit.scss
+++ b/src/scss/components/ProductAddEdit.scss
@@ -10,7 +10,7 @@
       width: 100%;
       margin: auto;
   
-      textarea#task-description:placeholder-shown,
+      textarea#product-description:placeholder-shown,
       input:placeholder-shown{
         background: pink;
       }
