--- a/src/scss/components/Pagination.scss
+++ b/src/scss/components/Pagination.scss
@@ -18,6 +18,19 @@
         float: right;
     }
 
+    &__mid{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .btn-group{
+            display: flex;
+            justify-content: space-between;
+            .page-wrapper{
+                margin: 0 10px;
+            }
+        }
+    }
+
     a, span {
         display: block;
         text-align: center;
@@ -28,7 +41,7 @@
         color: #999;
         font-size: 13px;
         padding: 0 20px;
-        max-width: 160px;
+        max-width: 120px;
         background-color: transparent;
         border-radius: 4px;
         border: 1px solid #ccc;
