--- a/src/scss/components/TopNavigation.scss
+++ b/src/scss/components/TopNavigation.scss
@@ -39,6 +39,25 @@
     input[type="text"]:focus {
       width: 400px;
     }
+
+    .cart-link{
+      position: relative;
+      display: inline-grid;
+
+      &__count{
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        border-radius: 100%;
+        top: -12px;
+        right: 35px;
+        background: #86deb7;
+        color: #fff;
+        font-size: 14px;
+        font-weight: 700;
+        text-align: center
+      }
+    }
   
     .top-icon {
       display: none;
@@ -54,6 +73,8 @@
         display: inline-grid;
       }
     }
+
+
   
   }
   
