--- a/src/scss/components/TopNavigation.scss
+++ b/src/scss/components/TopNavigation.scss
@@ -17,6 +17,12 @@
       margin-right: 2rem;
       text-decoration: none;
     }
+
+
+    .top-logo{
+      width: auto;
+      max-height: 50px;
+    }
   
     .router-link-exact-active {
       color: #86deb7;
