--- a/src/scss/components/FilterProducts.scss
+++ b/src/scss/components/FilterProducts.scss
@@ -9,17 +9,14 @@ $thumb-height: 24px !default;
 $thumb-width: 24px !default;
 $thumb-shadow-size: 4px !default;
 $thumb-shadow-blur: 4px !default;
-$thumb-shadow-color: rgba(0, 0, 0, .2) !default;
+$thumb-shadow-color: 0px 0px 0px rgba(0, 0, 62, 0), 0px 0px 0px rgba(0, 0, 88, 0) !default;
 $thumb-border-width: 2px !default;
 $thumb-border-color: #346d1f !default;
 
-
-$track-border-width: 2px !default;
+$track-border-width: 4px !default;
 $track-height: 8px !default;
 $track-width: 100% !default;
-$track-shadow-size: 1px !default;
-$track-shadow-blur: 1px !default;
-$track-shadow-color: rgba(0, 0, 0, .2) !default;
+$track-shadow-color: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0) !default;
 $track-border-color: #346d1f !default;
 
 
@@ -101,7 +98,7 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
           margin: 10px 0;
           text-align: left;
           padding: 10px 0;
-          border-bottom: 1px solid rgb(194, 194, 194);
+         
   
           .filter-property--title {
             font-size: 15px;
@@ -119,6 +116,7 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
             }
           }
 
+          /* Slider */
           input[type='range'].slider {
             -webkit-appearance: none;
             width: 100%;
@@ -131,22 +129,22 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
           
           input[type='range'].slider::-webkit-slider-runnable-track {
             width: 100%;
-            height: 4.3px;
+            height: $track-height;
             cursor: pointer;
-            -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-                    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-            background: #5044ff;
-            border-radius: 13.7px;
+            -webkit-box-shadow: $track-shadow-color;
+                    box-shadow: $track-shadow-color;
+            background: $track-color;
+            border-radius: $track-radius;
             border: 0px solid rgba(1, 1, 1, 0);
           }
           
           input[type='range'].slider::-webkit-slider-thumb {
-            -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 62, 0), 0px 0px 0px rgba(0, 0, 88, 0);
-                    box-shadow: 0px 0px 0px rgba(0, 0, 62, 0), 0px 0px 0px rgba(0, 0, 88, 0);
-            border: 1.9px solid #3e63ea;
-            height: 17px;
-            width: 17px;
-            border-radius: 31px;
+            -webkit-box-shadow: $thumb-shadow-color;
+                    box-shadow: $thumb-shadow-color;
+            border: $thumb-border-width solid $thumb-border-color;
+            height: $thumb-height;
+            width: $thumb-width;
+            border-radius: $thumb-radius;
             background: #ffffff;
             cursor: pointer;
             -webkit-appearance: none;
@@ -154,32 +152,32 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
           }
           
           input[type='range'].slider:focus::-webkit-slider-runnable-track {
-            background: #5576ed;
+            background: $thumb-color;
           }
           
           input[type='range'].slider::-moz-range-track {
             width: 100%;
-            height: 4.3px;
+            height: $track-height;
             cursor: pointer;
-            box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
-            background: #5044ff;
-            border-radius: 13.7px;
+            box-shadow: $track-shadow-color;
+            background: $track-color;
+            border-radius: $track-radius;
             border: 0px solid rgba(1, 1, 1, 0);
           }
           
           input[type='range'].slider::-moz-range-thumb {
-            box-shadow: 0px 0px 0px rgba(0, 0, 62, 0), 0px 0px 0px rgba(0, 0, 88, 0);
-            border: 1.9px solid #3e63ea;
-            height: 17px;
-            width: 17px;
-            border-radius: 31px;
+            box-shadow: $thumb-shadow-color;
+            border: $thumb-border-width solid $thumb-border-color;
+            height: $thumb-height;
+            width: $thumb-width;
+            border-radius: $thumb-radius;
             background: #ffffff;
             cursor: pointer;
           }
           
           input[type='range'].slider::-ms-track {
             width: 100%;
-            height: 4.3px;
+            height: $track-width;
             cursor: pointer;
             background: transparent;
             border-color: transparent;
@@ -187,36 +185,35 @@ $ie-bottom-track-color: darken($track-color, $contrast) !default;
           }
           
           input[type='range'].slider::-ms-fill-lower {
-            background: #2752e7;
+            background: $thumb-color;
             border: 0px solid rgba(1, 1, 1, 0);
-            border-radius: 27.4px;
-            box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
+            border-radius: $thumb-radius;
+            box-shadow: $track-shadow-color;
           }
           
           input[type='range'].slider::-ms-fill-upper {
-            background: #5044ff;
+            background: $track-color;
             border: 0px solid rgba(1, 1, 1, 0);
-            border-radius: 27.4px;
+            border-radius: $track-radius;
             box-shadow: 0px 0px 0px rgba(0, 0, 0, 0), 0px 0px 0px rgba(13, 13, 13, 0);
           }
           
           input[type='range'].slider::-ms-thumb {
             box-shadow: 0px 0px 0px rgba(0, 0, 62, 0), 0px 0px 0px rgba(0, 0, 88, 0);
-            border: 1.9px solid #3e63ea;
-            height: 17px;
-            width: 17px;
-            border-radius: 31px;
+            border: $thumb-border-width solid $thumb-border-color;
+            height: $thumb-height;
+            width: $thumb-width;
+            border-radius: $thumb-radius;
             background: #ffffff;
             cursor: pointer;
-            height: 4.3px;
           }
           
           input[type='range'].slider:focus::-ms-fill-lower {
-            background: #5044ff;
+            background: $track-color;
           }
           
           input[type='range'].slider:focus::-ms-fill-upper {
-            background: #5576ed;
+            background: $track-color;
           }
         }
      
