--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,24 @@ html, body {
     }
 
 
+    a{
+      text-decoration: none;
+      color: #000;
+    }
+
+    ul{
+      list-style: none;
+      width: 100%;
+    }
+
+    ul, li{
+      margin: 0;
+	    padding: 0;
+    }
+
+    
+
+
     
   }
   
@@ -46,7 +64,6 @@ html, body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
   }
   
   .max-width-block {
@@ -171,7 +188,7 @@ html, body {
 
     &.red-style{
       background: #fff;
-      color: #000;
+      color: #e6270e;
       border-color: #e6270e;
       &:hover{
         background: #e6270e;
