--- a/src/scss/components/ProductList.scss
+++ b/src/scss/components/ProductList.scss
@@ -11,15 +11,21 @@
       position: relative;
       font-family: Arial;
       width: 200px;
-
-      select{
-        display: none;
-      }
-
-      .select-selected {
-        background-color: DodgerBlue;
-      }
       
+      &__btn{
+        display: inline-flex;
+        padding: 5px 40px 6px;
+        margin: 5px 7px;
+        cursor: pointer;
+        line-height: 20px;
+        font-size: 13px;
+        border-radius: 4px;
+        border: 1px solid #e2e2e2;
+
+        &:hover{
+          background: #579740;
+        }
+      }
       
     }
   
