--- a/src/scss/components/TopNavigation.scss
+++ b/src/scss/components/TopNavigation.scss
@@ -38,7 +38,6 @@
       font-size: 1rem;
       outline: 0;
       padding: 7px;
-      width: 209px;
       transition: width 0.6s ease-in-out;
     }
   
@@ -72,6 +71,7 @@
     input[type="search"]{
       margin-right: 3rem;
       height: 45px;
+      width: 80%;
     }
   
     .icon-wrapper{
@@ -80,7 +80,26 @@
       }
     }
 
+    .profile-container{
+      width: auto;
+      height: 40px;
+      position: relative;
+      
+      .profile-inner{
+        text-align: center;
+      }
 
+      .profile-img{
+        border-radius: 50%;
+        width: auto;
+        height: 2em;
+        line-height: 0;
+      }
+    }
+
+      .top-desktop{
+        color: #fff;
+      }
   
   }
   
