--- a/src/scss/components/ProductCard.scss
+++ b/src/scss/components/ProductCard.scss
@@ -214,8 +214,8 @@
     }
   }
   
-  @media screen and (max-width: 800px) {
-    .product {
-      flex: 0 0 calc(50% - calc(1rem * 0.55));
-    }
-  }
+  // @media screen and (max-width: 800px) {
+  //   .product {
+  //     flex: 0 0 calc(50% - calc(1rem * 0.55));
+  //   }
+  // }
