--- a/src/scss/components/Cart.scss
+++ b/src/scss/components/Cart.scss
@@ -16,16 +16,29 @@
       flex-direction: row;
     }
   
-    .cart-product-card {
-      display: table;
+    ul.cart-product-card {
+	  display: flex;
+	  display: -webkit-box;
+	  display: -ms-flexbox;
+	  -ms-flex-wrap: wrap;
       margin-right: 40px;
       margin-bottom: 40px;
-      border: 1px solid #000;
+	  flex-wrap: wrap;
+	  max-width: 800px;
+	  padding: 20px;
   
-      td{
+      li{
         padding: 20px;
-        border: 1px solid #000;
-        text-align: center;
+		text-align: center;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-ms-flex-direction: column;
+		flex-direction: column;
+		margin-right: 40px;
+		margin-bottom: 40px;
       }
 
       .product-price {
@@ -33,33 +46,25 @@
       }
     
       img {
-        max-height: 100px;
-        max-width: 100px;
-      }
+        max-height: 300px;
+        max-width: auto;
+	  }
+	  
+	  .cart-counter{
+		margin: 0 auto;
+		width: 50%;
+	  }
+
+	  .card-row{
+		margin: 20px 0;
+	  }
 
     }
 
-    .green-style{
-      border-color: #579740;
-      color: #579740;
-
-      &:hover{
-        background: #579740;
-        color: #fff;
-      }
-    }
+   
   
   }
   
-  
-  ul {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 800px;
-    flex: 2;
-    padding-left: 0;
-    justify-content: center;
-  }
 
   .cart-checkout {
     flex: 1;
