--- a/src/scss/components/ProductList.scss
+++ b/src/scss/components/ProductList.scss
@@ -14,7 +14,7 @@
       
       &__btn{
         display: inline-flex;
-        padding: 5px 40px 6px;
+        padding: 15px 40px;
         margin: 5px 7px;
         cursor: pointer;
         line-height: 20px;
@@ -22,9 +22,6 @@
         border-radius: 4px;
         border: 1px solid #e2e2e2;
 
-        &:hover{
-          background: #579740;
-        }
       }
       
     }
