--- a/src/scss/components/Pagination.scss
+++ b/src/scss/components/Pagination.scss
@@ -2,7 +2,8 @@
     width: 100%;
     height: 44px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     margin: 0 auto 60px;
     padding: 0 15px;
     justify-content: center;
@@ -11,27 +12,8 @@
         width: 20%;
     }
 
-    &__left{
-      
-        & a{
-            float:right;
-        }
-    }
-    &__right{
-        float: left;
-    }
-
-    &__mid{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        .btn-group{
-            display: flex;
-            justify-content: space-between;
-            .page-wrapper{
-                margin: 0 10px;
-            }
-        }
+    li{
+        margin: 0 5px;
     }
 
     a, span {
@@ -39,22 +21,24 @@
         text-align: center;
         font-family: Helvetica, Arial, sans-serif;
         font-weight: 300;
-        line-height: 42px;
         height: 44px;
         color: #999;
         font-size: 13px;
-        padding: 0 20px;
-        max-width: 120px;
+        padding: 10px;
+        min-width:44px;
+        min-height:44px;
         background-color: transparent;
         border-radius: 4px;
-        border: 1px solid #ccc;
-        text-decoration: none;
-        margin: 0 6px;
-        transition: all .2s ease-in-out;
+        border: 1px solid rgb(129, 128, 128);
+        box-shadow: inset 0px 1px 0px 0px rgba(255,255,255,.35);
 
         &:hover{
             border-color: #005bff;
             color: #005bff;
         }
+    }
+
+    .disabled{
+        opacity: 0;
     }
 }
