--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,17 +33,17 @@ html, body {
       /* Checkbox style */
 
 	  .checkbox-control{
-		position: relative;
-		display: block;
-		position: relative;
-		padding-left: 35px;
-		margin-bottom: 12px;
-		cursor: pointer;
-		font-size: 22px;
-		-webkit-user-select: none;
-		-moz-user-select: none;
-		-ms-user-select: none;
-		user-select: none;
+      position: relative;
+      display: block;
+      position: relative;
+      padding-left: 35px;
+      margin-bottom: 12px;
+      cursor: pointer;
+      font-size: 22px;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
 
 		input[type=checkbox] {
 			opacity: 0;
@@ -64,13 +64,13 @@ html, body {
 		}
 		
 		/* On mouse-over, add a grey background color */
-		.checkbox-control:hover input ~ .checkbox-box {
+		&:hover input ~ .checkbox-box {
 			background-color: #ccc;
 		}
 		
 		/* When the checkbox is checked, add a blue background */
-		.checkbox-control input:checked ~ .checkbox-box {
-			background-color: #2196F3;
+		input:checked ~ .checkbox-box {
+			background-color: #346d1f;
 		}
 		
 		/* Create the checkbox-box/indicator (hidden when not checked) */
@@ -81,17 +81,17 @@ html, body {
 		}
 		
 		/* Show the checkbox-box when checked */
-		.checkbox-control input:checked ~ .checkbox-box:after {
+		input:checked ~ .checkbox-box:after {
 			display: block;
 		}
 		
 		/* Style the checkbox-box/indicator */
-		.checkbox-control .checkbox-box:after {
-			left: 9px;
-			top: 5px;
+		.checkbox-box:after {
+			left: 10px;
+			top: 7px;
 			width: 5px;
 			height: 10px;
-			border: solid white;
+			border: solid black;
 			border-width: 0 3px 3px 0;
 			-webkit-transform: rotate(45deg);
 			-ms-transform: rotate(45deg);
@@ -100,27 +100,6 @@ html, body {
 
 
 	  }
-
-
-	 
-
-
-
-	  input[type=checkbox]:checked~.checkbox-box {
-		content: "x";
-		position: absolute;
-		width: 10px;
-		height: 10px;
-		top: 2px;
-		left: 2px;
-		color:black;
-	  }
-
-	  input[type=checkbox].styled-checkbox:hover~.checkbox-box {
-		background-color: #ccc;
-	  }
-
-
 
 	  /*END Checkbox style */
 
