--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -101,7 +101,13 @@ html, body {
 
 	  }
 
-	  /*END Checkbox style */
+    /*END Checkbox style */
+    
+
+    .selected{
+      background: #e6eee7;
+      border-radius: 10px;
+    }
 
 
     
