--- a/src/scss/components/ProductDetail.scss
+++ b/src/scss/components/ProductDetail.scss
@@ -51,7 +51,7 @@
           text-align: center;
   
           .product-image{
-            max-width: 100%;
+            max-width: auto;
             max-height: 100%;
           }
         }
@@ -76,8 +76,8 @@
       @media screen and (max-width: 550px) {
         .image-wrapper {
           .product-image{
-          max-width: 140px;
-          max-height: 280px;
+            max-width: auto;
+            max-height: 280px;
           }
         }
       }
