--- a/src/scss/components/CommentForm.scss
+++ b/src/scss/components/CommentForm.scss
@@ -87,7 +87,9 @@ $border-form-btn: #ABABAB;
     padding: 10px;
 }
 
-
+.reviews-container{
+    border-radius: 10px;
+}
 .reviews{
     padding: 10px 30px;
     
