--- a/src/scss/preloader.scss
+++ b/src/scss/preloader.scss
@@ -1,7 +1,7 @@
 .lds-dual-ring {
   width: 64px;
   height: 64px;
-  margin: 0 auto;
+  margin: 50px auto;
 }
 .lds-dual-ring:after {
   content: " ";
