--- a/src/scss/components/ProductCard.scss
+++ b/src/scss/components/ProductCard.scss
@@ -40,17 +40,35 @@
         border-radius: 2px;
       }
     }
+
+    .product-image-wrapper{
+      position: relative;
   
-    .image-wrapper {
+      .image-wrapper {
 
-      text-align: center;
+        text-align: center;
+        overflow: hidden;
+        min-height: 300px;
 
-      .product-image{
-        width: auto;
-        max-height: 280px;
+        .product-image{
+          width: auto;
+          max-height: 300px;
+          
+
+        }
+  
+      }
+
+      .product-sale{
+        position: absolute;
+        bottom:0;
+        left:0;
+        border-radius: 10px;
+        padding: 5px;
+        background: red;
+        color: white;
 
       }
- 
     }
   
     @media screen and (max-width: 550px) {
@@ -199,6 +217,17 @@
           text-overflow: ellipsis;
           white-space: nowrap;
           margin-right: 4px;
+
+          &.available{
+            background: #31df21;
+            color: #ededed;
+          }
+
+          &.not-available{
+            background: #e63e32;
+            color: #ededed;
+          }
+
         }    
 
       }
