--- a/src/scss/components/ProductDetail.scss
+++ b/src/scss/components/ProductDetail.scss
@@ -8,6 +8,7 @@
     .product {
       box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12),
         0 3px 1px -2px rgba(0, 0, 0, 0.2);
+      margin: 0;
       margin-bottom: 2rem;
       padding: 1rem;
       width: 100%;
@@ -43,18 +44,62 @@
         display: flex;
         flex-direction: column;
         position: relative;
+
+        .stock-block{
+          display: flex;
+          justify-content: center;
   
+          .stock{
+            background: #ededed;
+            display: inline-block;
+            font-size: 14px;
+            padding: 4px 8px;
+            border-radius: 4px;
+            max-width: 125px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            margin-right: 4px;
   
-        .image-wrapper {
-          background-position: center;
-          background-size: cover;
-          text-align: center;
+            &.available{
+              background: #31df21;
+              color: #ededed;
+            }
   
-          .product-image{
-            max-width: auto;
-            max-height: 100%;
+            &.not-available{
+              background: #e63e32;
+              color: #ededed;
+            }
+  
+          }    
+  
+        }
+  
+        .product-image-wrapper{
+          position: relative;
+
+          .image-wrapper {
+            background-position: center;
+            background-size: cover;
+            text-align: center;
+    
+            .product-image{
+              max-width: auto;
+              max-height: 100%;
+            }
+          }
+
+          .product-sale{
+            position: absolute;
+            bottom:0;
+            left:0;
+            border-radius: 10px;
+            padding: 5px;
+            background: red;
+            color: white;
+    
           }
         }
+        
   
   
         .buy-block{
