--- a/src/scss/components/ProductCard.scss
+++ b/src/scss/components/ProductCard.scss
@@ -61,10 +61,10 @@
 
       .product-sale{
         position: absolute;
-        bottom:0;
+        bottom: 2%;
         left:0;
-        border-radius: 10px;
-        padding: 5px;
+        border-radius: 6px;
+        padding: 5px 10px;
         background: red;
         color: white;
 
