--- a/src/scss/components/ProductCard.scss
+++ b/src/scss/components/ProductCard.scss
@@ -61,8 +61,8 @@
 
       .product-sale{
         position: absolute;
-        bottom: 2%;
-        left:0;
+        top: 0;
+        right:0;
         border-radius: 6px;
         padding: 5px 10px;
         background: red;
