--- a/src/scss/components/TopNavigation.scss
+++ b/src/scss/components/TopNavigation.scss
@@ -51,14 +51,14 @@
 
       &__count{
         position: absolute;
-        width: 30px;
-        height: 30px;
+        min-width: 20px;
+        height: 20px;
         border-radius: 100%;
-        top: -12px;
-        right: 35px;
+        top: -5px;
+        right: 44px;
         background: #86deb7;
         color: #fff;
-        font-size: 14px;
+        font-size: 12px;
         font-weight: 700;
         text-align: center
       }
