--- a/src/scss/components/CategoriesNavigation.scss
+++ b/src/scss/components/CategoriesNavigation.scss
@@ -21,6 +21,7 @@ $menu-item-color: #579740;
     }
 
     a.menu-item{
+        font-size: 18px;
         padding: 10px;
         background: $menu-item-color;
         color: #FFFFFF;
